--- a/docs/scripts/tsconfig.json
+++ b/docs/scripts/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["../types/react-docgen.d.ts", "api-docs-builder/**/*", "i18n.js"],
+  "include": ["*.ts", "i18n.js"],
   "compilerOptions": {
     "allowJs": true,
     "isolatedModules": true,
@@ -10,6 +10,5 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "types": ["node"]
-  },
-  "exclude": ["node_modules"]
+  }
 }
