--- a/packages/api-docs-builder/tsconfig.json
+++ b/packages/api-docs-builder/tsconfig.json
@@ -14,7 +14,7 @@
     "strict": true,
     "baseUrl": "./",
     "paths": {
-      "react-docgen": ["../../types/react-docgen.d.ts"]
+      "react-docgen": ["./react-docgen.d.ts"]
     }
   },
   "include": ["./**/*.ts", "./**/*.js"],
