--- a/package.json
+++ b/package.json
@@ -151,8 +151,8 @@
     "karma": "^6.4.1",
     "karma-browserstack-launcher": "~1.6.0",
     "karma-chrome-launcher": "^3.1.1",
-    "karma-firefox-launcher": "^2.1.2",
     "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-mocha": "^2.0.1",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
@@ -183,6 +183,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^13.0.4",
+    "shadow-dom-testing-library": "^1.8.0",
     "sinon": "^13.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
