--- a/docs/package.json
+++ b/docs/package.json
@@ -44,12 +44,12 @@
     "@mui/styles": "^5.10.16",
     "@mui/system": "^5.10.16",
     "@mui/types": "^7.2.2",
-    "@mui/x-data-grid": "^5.17.13",
-    "@mui/x-data-grid-generator": "^5.17.13",
-    "@mui/x-data-grid-pro": "^5.17.13",
-    "@mui/x-date-pickers": "6.0.0-alpha.9",
-    "@mui/x-date-pickers-pro": "6.0.0-alpha.9",
-    "@mui/x-license-pro": "^5.17.12",
+    "@mui/x-data-grid": "6.0.0-alpha.10",
+    "@mui/x-data-grid-generator": "6.0.0-alpha.10",
+    "@mui/x-data-grid-pro": "6.0.0-alpha.10",
+    "@mui/x-date-pickers": "6.0.0-alpha.10",
+    "@mui/x-date-pickers-pro": "6.0.0-alpha.10",
+    "@mui/x-license-pro": "6.0.0-alpha.9",
     "@trendmicro/react-interpolate": "^0.5.5",
     "@types/autosuggest-highlight": "^3.2.0",
     "@types/css-mediaquery": "^0.1.1",
