--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,28 @@ on:
 permissions: {}
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
+        with:
+          # fetch all tags which are required for `yarn release:changelog`
+          fetch-depth: 0
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # v3.5.1
+        with:
+          node-version: 14
+          cache: 'yarn' # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
+      - run: yarn install
+      - name: Eslint
+        run: yarn lint:ci
+      - name: Stylelint
+        run: yarn stylelint
+      - name: Lint JSON
+        run: yarn jsonlint
+      - name: Lint Markdown
+        run: yarn markdownlint
+
   # Tests dev-only scripts across all supported dev environments
   test-dev:
     # l10nbot does not affect dev scripts.
