--- a/packages/api-docs-builder/package.json
+++ b/packages/api-docs-builder/package.json
@@ -9,13 +9,13 @@
   "dependencies": {
     "@babel/core": "^7.20.5",
     "@mui-internal/docs-utilities": "*",
-    "@mui/markdown": "*",
+    "@mui/markdown": "^5.0.0",
     "ast-types": "^0.14.2",
     "doctrine": "^3.0.0",
     "lodash": "^4.17.21",
     "react-docgen": "^5.4.3",
     "recast": "^0.22.0",
-    "typescript-to-proptypes": "*",
+    "typescript-to-proptypes": "^5.0.0",
     "yargs": "^17.6.2"
   },
   "devDependencies": {
