--- a/packages/mui-material/package.json
+++ b/packages/mui-material/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/material",
-  "version": "5.10.17",
+  "version": "5.11.0",
   "private": false,
   "author": "MUI Team",
   "description": "React components that implement Google's Material Design.",
@@ -61,11 +61,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.6",
-    "@mui/base": "5.0.0-alpha.109",
-    "@mui/core-downloads-tracker": "^5.10.17",
-    "@mui/system": "^5.10.17",
-    "@mui/types": "^7.2.2",
-    "@mui/utils": "^5.10.16",
+    "@mui/base": "^5.0.0-alpha.110",
+    "@mui/core-downloads-tracker": "^5.11.0",
+    "@mui/system": "^5.11.0",
+    "@mui/types": "^7.2.3",
+    "@mui/utils": "^5.11.0",
     "@types/react-transition-group": "^4.4.5",
     "clsx": "^1.2.1",
     "csstype": "^3.1.1",
