Pin unstable dependencies

--- a/docs/package.json
+++ b/docs/package.json
@@ -31,14 +31,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/base": "^5.0.0-alpha.110",
+    "@mui/base": "5.0.0-alpha.110",
     "@mui/docs": "^5.11.0",
     "@mui/icons-material": "^5.11.0",
-    "@mui/joy": "^5.0.0-alpha.58",
-    "@mui/lab": "^5.0.0-alpha.112",
+    "@mui/joy": "5.0.0-alpha.58",
+    "@mui/lab": "5.0.0-alpha.112",
     "@mui/markdown": "^5.0.0",
     "@mui/material": "^5.11.0",
-    "@mui/material-next": "^6.0.0-alpha.66",
+    "@mui/material-next": "6.0.0-alpha.66",
     "@mui/styled-engine": "^5.11.0",
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/styles": "^5.11.0",
