--- a/packages/mui-joy/package.json
+++ b/packages/mui-joy/package.json
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.6",
-    "@mui/base": "^5.0.0-alpha.110",
+    "@mui/base": "5.0.0-alpha.110",
     "@mui/core-downloads-tracker": "^5.11.0",
     "@mui/system": "^5.11.0",
     "@mui/types": "^7.2.3",
