--- a/packages/mui-material-next/package.json
+++ b/packages/mui-material-next/package.json
@@ -59,7 +59,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.6",
-    "@mui/base": "^5.0.0-alpha.110",
+    "@mui/base": "5.0.0-alpha.110",
     "@mui/material": "^5.11.0",
     "@mui/system": "^5.11.0",
     "@mui/types": "^7.2.3",
