--- a/docs/package.json
+++ b/docs/package.json
@@ -31,19 +31,19 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/base": "5.0.0-alpha.109",
-    "@mui/docs": "^5.10.16",
-    "@mui/icons-material": "^5.10.16",
-    "@mui/joy": "5.0.0-alpha.57",
-    "@mui/lab": "5.0.0-alpha.111",
-    "@mui/markdown": "*",
-    "@mui/material": "^5.10.17",
-    "@mui/material-next": "6.0.0-alpha.65",
-    "@mui/styled-engine": "^5.10.16",
-    "@mui/styled-engine-sc": "^5.10.16",
-    "@mui/styles": "^5.10.16",
-    "@mui/system": "^5.10.17",
-    "@mui/types": "^7.2.2",
+    "@mui/base": "5.0.0-alpha.110",
+    "@mui/docs": "^5.11.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/joy": "5.0.0-alpha.58",
+    "@mui/lab": "5.0.0-alpha.112",
+    "@mui/markdown": "^5.0.0",
+    "@mui/material": "^5.11.0",
+    "@mui/material-next": "6.0.0-alpha.66",
+    "@mui/styled-engine": "^5.11.0",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/styles": "^5.11.0",
+    "@mui/system": "^5.11.0",
+    "@mui/types": "^7.2.3",
     "@mui/x-data-grid": "6.0.0-alpha.11",
     "@mui/x-data-grid-generator": "6.0.0-alpha.11",
     "@mui/x-data-grid-pro": "6.0.0-alpha.11",
