Rename the package to @mui/internal-waterfall

--- a/packages/waterfall/package.json
+++ b/packages/waterfall/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mui-internal/waterfall",
+  "name": "@mui/internal-waterfall",
   "version": "1.0.0",
   "private": "true",
   "type": "module",
