Add mui system in the tsconfig.build.json

--- a/packages/mui-md-theme/tsconfig.build.json
+++ b/packages/mui-md-theme/tsconfig.build.json
@@ -11,5 +11,6 @@
     "types": ["react", "node"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"],
+  "references": [{ "path": "../mui-system/tsconfig.build.json" }]
 }
