--- a/packages/mui-material/tsconfig.build.json
+++ b/packages/mui-material/tsconfig.build.json
@@ -14,7 +14,6 @@
   "exclude": ["src/**/*.spec.ts*", "src/**/*.test.ts*"],
   "references": [
     { "path": "../mui-base/tsconfig.build.json" },
-    { "path": "../mui-system/tsconfig.build.json" },
-    { "path": "../mui-md-theme/tsconfig.build.json" }
+    { "path": "../mui-system/tsconfig.build.json" }
   ]
 }
