[docs] replace react-virtualized with react-virtuoso in Table

--- a/docs/package.json
+++ b/docs/package.json
@@ -58,7 +58,6 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-swipeable-views": "^0.13.1",
     "@types/react-swipeable-views-utils": "^0.13.4",
-    "@types/react-virtualized": "^9.21.21",
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "5.1.26",
     "autoprefixer": "^10.4.13",
@@ -108,7 +107,7 @@
     "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.14.0",
     "react-transition-group": "^4.4.5",
-    "react-virtualized": "^9.22.3",
+    "react-virtuoso": "^4.0.1",
     "react-window": "^1.8.8",
     "recharts": "2.2.0",
     "rimraf": "^3.0.2",
