--- a/packages/mui-base/package.json
+++ b/packages/mui-base/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@babel/runtime": "^7.20.7",
     "@emotion/is-prop-valid": "^1.2.0",
+    "@floating-ui/dom": "^1.1.0",
     "@mui/types": "^7.2.3",
     "@mui/utils": "^5.11.2",
     "@popperjs/core": "^2.11.6",
