--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /docs/.env.local
 /docs/export
 /docs/pages/playground/
+/docs/public/feed/
 /examples/**/.cache
 /packages/mui-codemod/lib
 /packages/mui-envinfo/*.tgz
